--- a/idenx.html
+++ b/idenx.html
@@ -144,7 +144,7 @@
   </section>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" src="rooms.js"></script>
 <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
