--- a/idenx.html
+++ b/idenx.html
@@ -40,8 +40,9 @@
       <div id="game-text"  class="text-center">
           <p>Survive</p>
       </div>
+      <div class="text-center">
       <input id="user-input" placeholder="Please type your command.."></input>
-
+    </div>
   <!-- Footer -->
   <section>
     <footer>
