--- a/idenx.html
+++ b/idenx.html
@@ -17,6 +17,9 @@
     />
     <meta property="og:type " content="Text-Based Adventure Game" />
 
+    <!-- CDN Google jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
      <!-- Bootstrap CSS -->
      <link
      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -143,8 +146,6 @@
       </div>
     </footer>
   </section>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="rooms.js"></script>
 <script type="text/javascript" src="script.js"></script>
   </body>
