--- a/idenx.html
+++ b/idenx.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- OG adds -->
-    <meta property="og:title" content="Fight For Your Life" />
+    <!-- <meta property="og:title" content="Fight For Your Life" />
     <meta property="og:description" content="For All Your Educational Needs With A Dependapotamus" />
     <meta
       property="og:image"
@@ -15,7 +15,7 @@
       property="og:url"
       content="https://rocky-recon.github.io/fight_for_your_life/"
     />
-    <meta property="og:type " content="Text-Based Adventure Game" />
+    <meta property="og:type " content="Text-Based Adventure Game" /> -->
 
     <!-- CDN Google jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
