--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
     <title>Fight For Your Life</title>
   </head>
   <body>
-          <div class="container-fluid ">
+          <!-- >
               <div class="text-center">
                  <img src="./img/ffyl.png" alt="" width="410" height="400"> 
               </div>
-          </div>
+           -->
+          <section>
+            <div class="container-fluid ">
       <div id="game-text"  class="text-center">
           <p>Survive</p>
       </div>
       <div class="text-center">
       <input id="user-input" placeholder="Type your command.."></input>
     </div>
+  </div>
+  </section>
   <!-- Footer -->
   <section>
     <footer>
