front end updates

--- a/index.html
+++ b/index.html
@@ -35,14 +35,9 @@
     <title>Fight For Your Life</title>
   </head>
   <body>
-          <!-- >
-              <div class="text-center">
-                 <img src="./img/ffyl.png" alt="" width="410" height="400"> 
-              </div>
-           -->
-          <section>
-            <div class="container-fluid ">
-      <div id="game-text"  class="text-center">
+  <section id="game">
+    <div class="jumbotron jumbotron-fluid">
+      <div id="game-text"  class="text-center container">
           <p>Survive</p>
       </div>
       <div class="text-center">
