updates to buttons. Need more work on game functio

--- a/index.html
+++ b/index.html
@@ -51,31 +51,34 @@
       <div class="container-fluid py-2" id="nav-bar">
         <ul class="nav flex-row justify-content-center">
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg" style="color: aliceblue;" id="game">
-              <i class="bi bi-pin-map"></i>
-                <small class="d-md-none ms-2">Game</small>
+            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;" onclick="changeRoom()" id="start-game">
+             <h2>Start</h2> 
+              <!-- <i class="bi bi-pin-map"></i>
+                <small class="d-md-none ms-2">Game</small> -->
             </button>
           </li>
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg" style="color: aliceblue;" onclick="help()" id="help">
-              Help
+            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;" onclick="displayHelp() " id="help">
+              <h2>Help</h2>
+              
               <!-- <i class="bi bi-pin-map"></i>
                 <small class="d-md-none ms-2">Map</small> -->
             </button>
           </li>
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg"  style="color: aliceblue;" id="save">
-              <i class="bi bi-save"></i>
-              <small class="d-md-none ms-2">Save</small>
+            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;"  id="inventory">
+              <h2>Inventory</h2>
+              <!-- <i class="bi bi-save"></i>
+              <small class="d-md-none ms-2">Save</small> -->
             </button>
           </li>
                  <!-- Submit your stories -->
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-sm" id="contact">
+            <button class="btn btn-sm" style="color:#ff8238 ; font-weight: bolder;" id="contact">
               <a
                 href="mailto:damianmercado32@gmail.com"
                 class="nav-link"
-                style="color: white; font-weight: bolder"
+               
                 ><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
                   </svg>
