--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       <div class="container-fluid py-2" id="nav-bar">
         <ul class="nav flex-row justify-content-center">
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;" onclick="changeRoom()" id="start-game">
+            <button class="btn btn-lg" style="color:#ffe638; font-weight: bolder;" onclick="changeRoom()" id="start-game">
              <h2>Start</h2> 
               <!-- <i class="bi bi-pin-map"></i>
                 <small class="d-md-none ms-2">Game</small> -->
             </button>
           </li>
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;" onclick="displayHelp() " id="help">
+            <button class="btn btn-lg" style="color:#ffe638; font-weight: bolder;" onclick="displayHelp() " id="help">
               <h2>Help</h2>
               
               <!-- <i class="bi bi-pin-map"></i>
@@ -66,7 +66,7 @@
             </button>
           </li>
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-lg" style="color:#ff8238 ; font-weight: bolder;"  id="inventory">
+            <button class="btn btn-lg" style="color:#ffe638; font-weight: bolder;"  id="inventory">
               <h2>Inventory</h2>
               <!-- <i class="bi bi-save"></i>
               <small class="d-md-none ms-2">Save</small> -->
@@ -74,7 +74,7 @@
           </li>
                  <!-- Submit your stories -->
           <li class="nav-item col-6 col-md-auto">
-            <button class="btn btn-sm" style="color:#ff8238 ; font-weight: bolder;" id="contact">
+            <button class="btn btn-sm" style="color:#ffe638; font-weight: bolder;" id="contact">
               <a
                 href="mailto:damianmercado32@gmail.com"
                 class="nav-link"
