small style updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section id="game">
     <div class="jumbotron jumbotron-fluid">
       <div id="game-text"  class="text-center container">
-          <p>Survive</p>
+          <h2 style="font-weight: bolder;">Survive</h2>
       </div>
       <div class="text-center">
       <input id="user-input" placeholder="Type your command.."></input>
